# LMS

./: .env  pyproject.toml  test.db
app/: app.py  auth.py  db.py  images.py  schemas.py  text.txt
